--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "css-build": "node-sass --omit-source-map-url sass/mystyles.scss css/mystyles.css",
+    "css-watch": "npm run css-build -- --watch",
+    "start": "npm run css-watch"
   },
   "dependencies": {
-    "bulma": "^0.9.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
@@ -18,8 +20,10 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "bulma": "^0.9.4",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "node-sass": "^9.0.0",
     "prettier": "^2.8.8",
     "vite": "^4.3.9"
   }
